auth service handler added
